[project]
name = "somq"
version = "0.1.2"
authors = [{name = "Jackie Yang", email = "jackie@jackieyang.me"}]
description = "Simple Object-based Message Queue"
license = { file="LICENSE" }
readme = { file="README.md", content-type="text/markdown" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/valkjsaaa/somq"
"Bug Tracker" = "https://github.com/valkjsaaa/somq/issues"
